Post rating with AJAX

--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -12,11 +12,11 @@
 
 	<div class="post-view">
 		<div class="post-view-rate">
-			<a class="up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote, click again to undo">
+			<a class="up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="#" title="Upvote, click again to undo">
 				<i class="fa fa-angle-up"></i>
 			</a>
 			<span class="middle">{{post.rating.positive - post.rating.negative}}</span>
-			<a class="down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}" title="Downvote, click again to undo">
+			<a class="down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="#" title="Downvote, click again to undo">
 				<i class="fa fa-angle-down"></i>
 			</a>
 		</div>
@@ -131,6 +131,7 @@
 {% endblock %}
 
 {% block footer_scripts %}
+
 	<script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
 	<script type="text/javascript">
 
@@ -140,5 +141,32 @@
 	});
 
 	CKEDITOR.config.forcePasteAsPlainText = true;
+
+	$(".up").click(function(e) {
+		e.preventDefault();
+		$.get("{{url_for('posts.rate', uuid=post.uuid, rating='1')}}", function(data){
+			rating = parseInt($(".middle").text());
+			if (data == 'True') {
+				$(".up").addClass('rated');
+				$(".middle").text(rating + 1);
+			} else {
+				$(".up").removeClass('rated');
+				$(".middle").text(rating - 1);
+			}
+		});
+	});
+	$(".down").click(function(e) {
+		e.preventDefault();
+		$.get("{{url_for('posts.rate', uuid=post.uuid, rating='0')}}", function(data){
+			rating = parseInt($(".middle").text());
+			if (data == 'False') {
+				$(".down").addClass('rated');
+				$(".middle").text(rating - 1);
+			} else {
+				$(".down").removeClass('rated');
+				$(".middle").text(rating + 1);
+			}
+		});
+	});
 	</script>
 {% endblock %}
