Link to Category

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -112,6 +112,7 @@ a
 	display: block
 	width: 40px
 	padding-top: 8px
+	margin-left: 4px
 	text-align: center
 	& .up, .middle, .down
 		font-size: 1.1em
@@ -131,7 +132,7 @@ a
 	font-size: 1.8em
 	width: 60px
 	height: 60px
-	margin: 12px 0 0 0
+	margin: 12px -8px 0 0
 	color: white
 	background-color: lighten($color_text, 55%)
 	text-align: center
