--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -57,14 +57,20 @@ a
 	background-color: white
 	margin: 0 0 10px 0
 	padding: 0
+	border: thin solid darken($color_background, 3%)
 	+border-radius(3px)
 	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
+	&.even
+		background-color:	darken($color_background, 1%)
+		& .post-index-item-title
+			+text-shadow(1px, 1px, 0, white, 0.8)
 
 .post-index-item-title
 	font-family: $font_headings
 	display: block
 	font-size: 1.5em
 	padding: 15px 0 5px 0
+	+text-shadow(1px, 1px, 0, darken($color_background, 3%), 1.0)
 	@extend .text-overflow-ellipsis
 	// +media-xs
 	// 	padding-left: 0
@@ -154,12 +160,11 @@ a
 /* post-view */
 .post-view, .post-submit
 	background-color: white
-	border: thin solid darken($color_background, 2%)
+	border: thin solid darken($color_background, 3%)
 	+border-radius(3px)
 	+box-shadow(1px, 2px, 2px, darken($color_background, 10%), 1.0)
 
 .post-view-title
-	float: left
 	display: block
 	font-family: $font_headings
 	font-size: 2.1em
@@ -172,7 +177,7 @@ a
 	width: 40px
 	text-align: center
 	padding-top: 10px
-	margin: 0 0 0 15px
+	margin: 0 15px
 	+user-select-none
 	& .up, .middle, .down
 		font-size: 1.3em
