Tired of the boring looking logo, place a temporal label

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -39,6 +39,15 @@ a
 	background-color: lighten($color_text, 60%)
 	vertical-align: middle
 
+/* TEMP */
+a.logo
+	margin-top: 8px
+	padding-top: 6px
+	display: block
+	font-size: 1.2em
+	font-family: $font_headings
+	font-weight: bold
+
 /* Navbar */
 .navbar
 	background-color: transparent
