--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -47,7 +47,7 @@
             <span class="sr-only">Toggle navigation</span>
             <i class="fa fa-bars"></i>
           </button>
-          <a class="logo" href="{{url_for('index')}}">Blender Today</a>
+          <a class="logo label label-primary " href="{{url_for('index')}}"><i class="fa fa-coffee"></i> Blender Today</a>
         </div>
 
         <nav class="collapse navbar-collapse" id="navbar-collapse-menu">
