--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -100,6 +100,11 @@
 
     <footer>
       <div class="container">
+        <span class="pull-left">
+          <p class="text-center">
+            Blender Today · Made with <i class="fa fa-heart-o"></i> in Amsterdam
+          </p>
+        </span>
         <span class="pull-right">
           <p>
             <a href="{{url_for('index')}}">Blender Today</a>
