--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -89,6 +89,7 @@
 			</div>
 		</div>
 		{% endfor %}
+		<div class="post-index-end"><i class="bf-blender"></i></div>
 	</div>
 </div>
 {% endblock %}
