--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -126,10 +126,20 @@ a.logo
 .post-index-item-rate
 	float: left
 	display: block
-	width: 40px
 	padding-top: 8px
-	margin-left: 4px
 	text-align: center
+	+media-xs
+		width: 15px
+		margin-left: 0
+	+media-sm
+		width: 25px
+		margin-left: 0
+	+media-md
+		width: 30px
+		margin-left: 0
+	+media-lg
+		width: 40px
+		margin-left: 4px
 	& .up, .middle, .down
 		font-size: 1.1em
 		padding: 0 0 2px 0
@@ -155,11 +165,18 @@ a.logo
 	font-size: 1.8em
 	width: 60px
 	height: 60px
-	margin: 12px -8px 0 0
 	color: white
 	background-color: lighten($color_text, 55%)
 	text-align: center
 	position: relative
+	+media-xs
+		margin: 12px -20px 0 0
+	+media-sm
+		margin: 12px -12px 0 0
+	+media-md
+		margin: 12px -15px 0 0
+	+media-lg
+		margin: 12px -8px 0 0
 	+transition(opacity, 25ms, ease-in)
 	+box-shadow(2px, 2px, 0, black, .1)
 	+border-radius(50%)
