--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -16,7 +16,7 @@
 			All
 		{% endif %}
 
-		<small>({{posts|length}})</small>
+		<span class="badge">({{posts|length}})</span>
 </h3>
 
 <div class="row post-index">
