--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -40,7 +40,7 @@
 		{% endif %}
 
 		<div class="post-view-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
-			<span title="{{post.creation_date.strftime('%H:%M on %A %d, %B %Y')}}">{{post.pretty_creation_date}}</span>
+			Posted <span title="{{post.creation_date.strftime('%H:%M on %A %d, %B %Y')}}">{{post.pretty_creation_date}}</span>
 			<small>by</small> {{post.user.first_name}} {{post.user.last_name}}
 			<span class="separator"></span>
 			<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
