--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -29,7 +29,7 @@
 					<a class="up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote, click again to undo">
 						<i class="fa fa-angle-up"></i>
 					</a>
-					<span class="middle">{{post.rating.positive - post.rating.negative}}</span>
+					<span class="middle">{{post.rating_delta}}</span>
 					<a class="down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}" title="Downvote, click again to undo">
 						<i class="fa fa-angle-down"></i>
 					</a>
@@ -127,6 +127,38 @@
 
 	$(document).mouseup(function(e){
 		$(document).unbind('mousemove');
+	});
+
+	$(".up").click(function(e) {
+		e.preventDefault();
+		var up = $(this);
+		var middle = $(this).next();
+		var down = $(this).next().next();
+		console.log(middle);
+		$.get($(this).attr("href"), function(data){
+			down.removeClass('rated');
+			if (data['rating'] === "True") {
+				up.addClass('rated');
+			} else {
+				up.removeClass('rated');
+			}
+			middle.text(data['rating_delta']);
+		});
+	});
+	$(".down").click(function(e) {
+		e.preventDefault();
+		var up = $(this).prev().prev();
+		var middle = $(this).prev();
+		var down = $(this);
+		$.get($(this).attr("href"), function(data){
+			up.removeClass('rated');
+			if (data['rating'] === "False") {
+				$(".down").addClass('rated');
+			} else {
+				$(".down").removeClass('rated');
+			}
+			middle.text(data['rating_delta']);
+		});
 	});
 
 </script>
