--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -142,18 +142,16 @@
   {% block footer_scripts %}
   {% endblock %}
 
-  {# 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', '{{config.GOOGLE_ANALYTICS_TRACKING_ID}}', '{{config.GOOGLE_ANALYTICS_DOMAIN}}');
+      ga('create', '{{config.GOOGLE_ANALYTICS_TRACKING_ID}}', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
     </script>
-  #}
   </body>
 </html>
 
